welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: ')' expected but 'if' found.
if (litMessage()=="A") {
^BDRBuggle:14: error: ';' expected but 'if' found.
if (litMessage()=="B") {
^BDRBuggle:75: error: illegal start of declaration
		gauche();gauche();avance();
                ^BDRBuggle:75: error: illegal start of declaration
		gauche();gauche();avance();
                         ^BDRBuggle:75: error: illegal start of declaration
		gauche();gauche();avance();
                                  ^BDRBuggle:77: error: ')' expected but 'if' found.
	if (litMessage(): String :=A) {
        ^BDRBuggle:80: error: ';' expected but 'if' found.
	if (litMessage(): String :=B) {
        ^BDRBuggle:97: error: Unmatched closing brace '}' ignored here
	}
        ^BDRBuggle:98: error: eof expected but '}' found.
}
^